--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "helmet": "^4.0.0",
     "joi": "^17.2.0",
     "mongoose": "^5.9.27",
+    "morgan": "^1.10.0",
     "underscore": "^1.10.2"
   }
 }
