--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "config": "^3.3.1",
     "express": "^4.17.1",
     "helmet": "^4.0.0",
     "joi": "^17.2.0",
