--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "joi": "^17.2.0",
     "mongoose": "^5.9.27",
     "morgan": "^1.10.0",
+    "pug": "^3.0.0",
     "underscore": "^1.10.2"
   }
 }
