--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^5.9.27",
     "morgan": "^1.10.0",
     "pug": "^3.0.0",
-    "underscore": "^1.10.2"
+    "underscore": "^1.10.2",
+    "winston": "^3.3.3"
   }
 }
