--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "pug": "^3.0.0",
     "underscore": "^1.10.2",
     "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "jest": "^26.4.0"
   }
 }
